--- a/samples/gles2_book/Common/esUtil_winrt_2013.vcxproj
+++ b/samples/gles2_book/Common/esUtil_winrt_2013.vcxproj
@@ -124,37 +124,37 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <GenerateManifest>false</GenerateManifest>
     <TargetName>esUtil</TargetName>
-    <OutDir>$(SolutionDir)WinRT\redist\vs2013\$(Platform)\$(Configuration)\</OutDir>
+    <OutDir>$(SolutionDir)WinRT\redist\vs2013\$(Platform)\$(Configuration)\$(MSBuildProjectName)\</OutDir>
     <IntDir>WinRT\vs2013\$(Platform)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <GenerateManifest>false</GenerateManifest>
     <TargetName>esUtil</TargetName>
-    <OutDir>$(SolutionDir)WinRT\redist\vs2013\$(Platform)\$(Configuration)\</OutDir>
+    <OutDir>$(SolutionDir)WinRT\redist\vs2013\$(Platform)\$(Configuration)\$(MSBuildProjectName)\</OutDir>
     <IntDir>WinRT\vs2013\$(Platform)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">
     <GenerateManifest>false</GenerateManifest>
     <TargetName>esUtil</TargetName>
-    <OutDir>$(SolutionDir)WinRT\redist\vs2013\$(Platform)\$(Configuration)\</OutDir>
+    <OutDir>$(SolutionDir)WinRT\redist\vs2013\$(Platform)\$(Configuration)\$(MSBuildProjectName)\</OutDir>
     <IntDir>WinRT\vs2013\$(Platform)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">
     <GenerateManifest>false</GenerateManifest>
     <TargetName>esUtil</TargetName>
-    <OutDir>$(SolutionDir)WinRT\redist\vs2013\$(Platform)\$(Configuration)\</OutDir>
+    <OutDir>$(SolutionDir)WinRT\redist\vs2013\$(Platform)\$(Configuration)\$(MSBuildProjectName)\</OutDir>
     <IntDir>WinRT\vs2013\$(Platform)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <GenerateManifest>false</GenerateManifest>
     <TargetName>esUtil</TargetName>
-    <OutDir>$(SolutionDir)WinRT\redist\vs2013\$(Platform)\$(Configuration)\</OutDir>
+    <OutDir>$(SolutionDir)WinRT\redist\vs2013\$(Platform)\$(Configuration)\$(MSBuildProjectName)\</OutDir>
     <IntDir>WinRT\vs2013\$(Platform)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <GenerateManifest>false</GenerateManifest>
     <TargetName>esUtil</TargetName>
-    <OutDir>$(SolutionDir)WinRT\redist\vs2013\$(Platform)\$(Configuration)\</OutDir>
+    <OutDir>$(SolutionDir)WinRT\redist\vs2013\$(Platform)\$(Configuration)\$(MSBuildProjectName)\</OutDir>
     <IntDir>WinRT\vs2013\$(Platform)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
