--- a/src/compiler/translator_common_winrt_2013.vcxproj
+++ b/src/compiler/translator_common_winrt_2013.vcxproj
@@ -96,37 +96,37 @@
     <GenerateManifest>false</GenerateManifest>
     <IntDir>WinRT\vs2013\$(Platform)\$(Configuration)\</IntDir>
     <TargetName>translator_common</TargetName>
-    <OutDir>$(SolutionDir)WinRT\libs\vs2013\$(Platform)\$(Configuration)\</OutDir>
+    <OutDir>$(SolutionDir)WinRT\redist\vs2013\$(Platform)\$(Configuration)\$(MSBuildProjectName)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <GenerateManifest>false</GenerateManifest>
     <IntDir>WinRT\vs2013\$(Platform)\$(Configuration)\</IntDir>
     <TargetName>translator_common</TargetName>
-    <OutDir>$(SolutionDir)WinRT\libs\vs2013\$(Platform)\$(Configuration)\</OutDir>
+    <OutDir>$(SolutionDir)WinRT\redist\vs2013\$(Platform)\$(Configuration)\$(MSBuildProjectName)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">
     <GenerateManifest>false</GenerateManifest>
     <IntDir>WinRT\vs2013\$(Platform)\$(Configuration)\</IntDir>
     <TargetName>translator_common</TargetName>
-    <OutDir>$(SolutionDir)WinRT\libs\vs2013\$(Platform)\$(Configuration)\</OutDir>
+    <OutDir>$(SolutionDir)WinRT\redist\vs2013\$(Platform)\$(Configuration)\$(MSBuildProjectName)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">
     <GenerateManifest>false</GenerateManifest>
     <IntDir>WinRT\vs2013\$(Platform)\$(Configuration)\</IntDir>
     <TargetName>translator_common</TargetName>
-    <OutDir>$(SolutionDir)WinRT\libs\vs2013\$(Platform)\$(Configuration)\</OutDir>
+    <OutDir>$(SolutionDir)WinRT\redist\vs2013\$(Platform)\$(Configuration)\$(MSBuildProjectName)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <GenerateManifest>false</GenerateManifest>
     <IntDir>WinRT\vs2013\$(Platform)\$(Configuration)\</IntDir>
     <TargetName>translator_common</TargetName>
-    <OutDir>$(SolutionDir)WinRT\libs\vs2013\$(Platform)\$(Configuration)\</OutDir>
+    <OutDir>$(SolutionDir)WinRT\redist\vs2013\$(Platform)\$(Configuration)\$(MSBuildProjectName)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <GenerateManifest>false</GenerateManifest>
     <IntDir>WinRT\vs2013\$(Platform)\$(Configuration)\</IntDir>
     <TargetName>translator_common</TargetName>
-    <OutDir>$(SolutionDir)WinRT\libs\vs2013\$(Platform)\$(Configuration)\</OutDir>
+    <OutDir>$(SolutionDir)WinRT\redist\vs2013\$(Platform)\$(Configuration)\$(MSBuildProjectName)\</OutDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
