--- a/src/libGLESv2/libGLESv2_winrt.vcxproj
+++ b/src/libGLESv2/libGLESv2_winrt.vcxproj
@@ -95,7 +95,7 @@
     <IgnoreImportLibrary>false</IgnoreImportLibrary>
     <TargetName>libGLESv2</TargetName>
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>$(SolutionDir)WinRT\redist\vs2012\$(Platform)\$(Configuration)\</OutDir>
+    <OutDir>$(SolutionDir)WinRT\redist\vs2012\$(Platform)\$(Configuration)\$(MSBuildProjectName)\</OutDir>
     <IntDir>WinRT\vs2012\$(Platform)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -103,7 +103,7 @@
     <IgnoreImportLibrary>false</IgnoreImportLibrary>
     <TargetName>libGLESv2</TargetName>
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>$(SolutionDir)WinRT\redist\vs2012\$(Platform)\$(Configuration)\</OutDir>
+    <OutDir>$(SolutionDir)WinRT\redist\vs2012\$(Platform)\$(Configuration)\$(MSBuildProjectName)\</OutDir>
     <IntDir>WinRT\vs2012\$(Platform)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">
@@ -111,7 +111,7 @@
     <IgnoreImportLibrary>false</IgnoreImportLibrary>
     <TargetName>libGLESv2</TargetName>
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>$(SolutionDir)WinRT\redist\vs2012\$(Platform)\$(Configuration)\</OutDir>
+    <OutDir>$(SolutionDir)WinRT\redist\vs2012\$(Platform)\$(Configuration)\$(MSBuildProjectName)\</OutDir>
     <IntDir>WinRT\vs2012\$(Platform)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">
@@ -119,7 +119,7 @@
     <IgnoreImportLibrary>false</IgnoreImportLibrary>
     <TargetName>libGLESv2</TargetName>
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>$(SolutionDir)WinRT\redist\vs2012\$(Platform)\$(Configuration)\</OutDir>
+    <OutDir>$(SolutionDir)WinRT\redist\vs2012\$(Platform)\$(Configuration)\$(MSBuildProjectName)\</OutDir>
     <IntDir>WinRT\vs2012\$(Platform)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -127,7 +127,7 @@
     <IgnoreImportLibrary>false</IgnoreImportLibrary>
     <TargetName>libGLESv2</TargetName>
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>$(SolutionDir)WinRT\redist\vs2012\$(Platform)\$(Configuration)\</OutDir>
+    <OutDir>$(SolutionDir)WinRT\redist\vs2012\$(Platform)\$(Configuration)\$(MSBuildProjectName)\</OutDir>
     <IntDir>WinRT\vs2012\$(Platform)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -135,7 +135,7 @@
     <IgnoreImportLibrary>false</IgnoreImportLibrary>
     <TargetName>libGLESv2</TargetName>
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>$(SolutionDir)WinRT\redist\vs2012\$(Platform)\$(Configuration)\</OutDir>
+    <OutDir>$(SolutionDir)WinRT\redist\vs2012\$(Platform)\$(Configuration)\$(MSBuildProjectName)\</OutDir>
     <IntDir>WinRT\vs2012\$(Platform)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
