--- a/src/libGLESv2/libGLESv2_phone.vcxproj
+++ b/src/libGLESv2/libGLESv2_phone.vcxproj
@@ -226,6 +226,7 @@
     <ClCompile Include="..\common\event_tracer.cpp" />
     <ClCompile Include="..\common\RefCountObject.cpp" />
     <ClCompile Include="..\common\winrtutils.cpp" />
+    <ClCompile Include="..\common\winrtwindow.cpp" />
     <ClCompile Include="..\third_party\murmurhash\MurmurHash3.cpp" />
     <ClCompile Include="..\third_party\winrt\ThreadEmulation\ThreadEmulation.cpp" />
     <ClCompile Include="Buffer.cpp" />
