--- a/src/libGLESv2/libGLESv2_phone.vcxproj.filters
+++ b/src/libGLESv2/libGLESv2_phone.vcxproj.filters
@@ -170,6 +170,12 @@
     <ClInclude Include="..\third_party\winrt\ThreadEmulation\ThreadEmulation.h">
       <Filter>Third Party\winrt\ThreadEmulation</Filter>
     </ClInclude>
+    <ClInclude Include="..\common\winrtutils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\common\winrtangle.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="renderer\BufferStorage.cpp">
@@ -313,7 +319,7 @@
     <ClCompile Include="..\common\winrtutils.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\common\winrtwindow.cpp">
+    <ClCompile Include="..\common\winrtangle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
