--- a/src/libGLESv2/libGLESv2_winrt_2013.vcxproj
+++ b/src/libGLESv2/libGLESv2_winrt_2013.vcxproj
@@ -271,6 +271,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\common\event_tracer.cpp" />
+    <ClCompile Include="..\common\winrtangle.cpp" />
     <ClCompile Include="..\common\winrtutils.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">NotUsing</PrecompiledHeader>
@@ -279,7 +280,6 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="..\common\winrtwindow.cpp" />
     <ClCompile Include="..\third_party\murmurhash\MurmurHash3.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
@@ -365,8 +365,8 @@
   <ItemGroup>
     <ClInclude Include="..\common\debug.h" />
     <ClInclude Include="..\common\system.h" />
+    <ClInclude Include="..\common\winrtangle.h" />
     <ClInclude Include="..\common\winrtutils.h" />
-    <ClInclude Include="..\common\winrtwindow.h" />
     <ClInclude Include="..\common\winrt\ThreadEmulation.h" />
     <ClInclude Include="..\common\winrt\threadutils.h" />
     <ClInclude Include="..\third_party\murmurhash\MurmurHash3.h" />
