--- a/src/libGLESv2/libGLESv2_winrt_2013.vcxproj.filters
+++ b/src/libGLESv2/libGLESv2_winrt_2013.vcxproj.filters
@@ -188,7 +188,7 @@
     <ClCompile Include="..\common\winrtutils.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\common\winrtwindow.cpp">
+    <ClCompile Include="..\common\winrtangle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -424,7 +424,7 @@
     <ClInclude Include="..\common\winrtutils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\common\winrtwindow.h">
+    <ClInclude Include="..\common\winrtangle.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
