--- a/src/libGLESv2/libGLESv2_winrt.vcxproj.filters
+++ b/src/libGLESv2/libGLESv2_winrt.vcxproj.filters
@@ -191,6 +191,9 @@
     <ClCompile Include="..\common\winrtangle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TLSWinrt.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BinaryStream.h">
@@ -425,6 +428,9 @@
       <Filter>Third Party\winrt\ThreadEmulation</Filter>
     </ClInclude>
     <ClInclude Include="..\common\winrtangle.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TLSWinrt.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
