--- a/src/libEGL/libEGL_winrt.vcxproj
+++ b/src/libEGL/libEGL_winrt.vcxproj
@@ -300,10 +300,12 @@
     <ClCompile Include="libEGL.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Surface.cpp" />
+    <ClCompile Include="TLSWinrt.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\common\angleutils.h" />
     <ClInclude Include="..\common\debug.h" />
+    <ClInclude Include="..\common\winrtplatform.h" />
     <ClInclude Include="..\common\winrtutils.h" />
     <ClInclude Include="Config.h" />
     <ClInclude Include="Display.h" />
@@ -314,6 +316,7 @@
     <ClInclude Include="resource.h" />
     <ClInclude Include="Surface.h" />
     <ClInclude Include="..\common\version.h" />
+    <ClInclude Include="TLSWinrt.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="libEGL.rc" />
