add TLSWinrt files to project

--- a/src/libEGL/libEGL_phone.vcxproj
+++ b/src/libEGL/libEGL_phone.vcxproj
@@ -176,6 +176,7 @@
     <ClInclude Include="..\..\include\EGL\eglext.h" />
     <ClInclude Include="..\..\include\EGL\eglplatform.h" />
     <ClInclude Include="..\common\version.h" />
+    <ClInclude Include="..\common\winrtplatform.h" />
     <ClInclude Include="..\common\winrt\ThreadEmulation.h" />
     <ClInclude Include="..\common\winrt\threadutils.h" />
     <ClInclude Include="Config.h" />
@@ -183,6 +184,7 @@
     <ClInclude Include="main.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Surface.h" />
+    <ClInclude Include="TLSWinrt.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\common\debug.cpp" />
@@ -192,6 +194,7 @@
     <ClCompile Include="libEGL.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Surface.cpp" />
+    <ClCompile Include="TLSWinrt.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\libGLESv2\libGLESv2_phone.vcxproj">
