--- a/src/libGLESv2/libGLESv2_phone.vcxproj.filters
+++ b/src/libGLESv2/libGLESv2_phone.vcxproj.filters
@@ -176,6 +176,12 @@
     <ClInclude Include="..\common\winrtangle.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TLSWinrt.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\common\winrtplatform.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="renderer\BufferStorage.cpp">
@@ -320,6 +326,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\common\winrtangle.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TLSWinrt.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
