--- a/src/libGLESv2/libGLESv2_winrt_2013.vcxproj
+++ b/src/libGLESv2/libGLESv2_winrt_2013.vcxproj
@@ -359,6 +359,7 @@
     <ClCompile Include="ResourceManager.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Texture.cpp" />
+    <ClCompile Include="TLSWinrt.cpp" />
     <ClCompile Include="Uniform.cpp" />
     <ClCompile Include="utilities.cpp" />
   </ItemGroup>
@@ -366,6 +367,7 @@
     <ClInclude Include="..\common\debug.h" />
     <ClInclude Include="..\common\system.h" />
     <ClInclude Include="..\common\winrtangle.h" />
+    <ClInclude Include="..\common\winrtplatform.h" />
     <ClInclude Include="..\common\winrtutils.h" />
     <ClInclude Include="..\common\winrt\ThreadEmulation.h" />
     <ClInclude Include="..\common\winrt\threadutils.h" />
@@ -437,6 +439,7 @@
     <ClInclude Include="ResourceManager.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="Texture.h" />
+    <ClInclude Include="TLSWinrt.h" />
     <ClInclude Include="Uniform.h" />
     <ClInclude Include="utilities.h" />
     <ClInclude Include="..\common\version.h" />
