--- a/src/libGLESv2/libGLESv2_phone.vcxproj.filters
+++ b/src/libGLESv2/libGLESv2_phone.vcxproj.filters
@@ -331,5 +331,8 @@
     <ClCompile Include="TLSWinrt.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\common\winrtangleutils.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
