--- a/src/libGLESv2/libGLESv2_winrt_2013.vcxproj.filters
+++ b/src/libGLESv2/libGLESv2_winrt_2013.vcxproj.filters
@@ -194,6 +194,9 @@
     <ClCompile Include="TLSWinrt.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\common\winrtangleutils.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BinaryStream.h">
@@ -434,6 +437,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\common\winrtplatform.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\common\winrtangleutils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
