--- a/src/libEGL/libEGL_phone.vcxproj
+++ b/src/libEGL/libEGL_phone.vcxproj
@@ -176,6 +176,8 @@
     <ClInclude Include="..\..\include\EGL\eglext.h" />
     <ClInclude Include="..\..\include\EGL\eglplatform.h" />
     <ClInclude Include="..\common\version.h" />
+    <ClInclude Include="..\common\winrtangle.h" />
+    <ClInclude Include="..\common\winrtangleutils.h" />
     <ClInclude Include="..\common\winrtplatform.h" />
     <ClInclude Include="..\common\winrt\ThreadEmulation.h" />
     <ClInclude Include="..\common\winrt\threadutils.h" />
@@ -188,6 +190,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\common\debug.cpp" />
+    <ClCompile Include="..\common\winrtangleutils.cpp" />
     <ClCompile Include="..\common\winrtutils.cpp" />
     <ClCompile Include="Config.cpp" />
     <ClCompile Include="Display.cpp" />
