--- a/src/libEGL/libEGL_phone.vcxproj.filters
+++ b/src/libEGL/libEGL_phone.vcxproj.filters
@@ -51,6 +51,12 @@
     <ClInclude Include="TLSWinrt.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\common\winrtangle.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\common\winrtangleutils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Config.cpp">
@@ -75,6 +81,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="TLSWinrt.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\common\winrtangleutils.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
