--- a/src/libEGL/libEGL_winrt.vcxproj
+++ b/src/libEGL/libEGL_winrt.vcxproj
@@ -293,6 +293,7 @@
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\common\winrtangleutils.cpp" />
     <ClCompile Include="..\common\winrtutils.cpp" />
     <ClCompile Include="Config.cpp" />
     <ClCompile Include="..\Common\debug.cpp" />
@@ -305,6 +306,7 @@
   <ItemGroup>
     <ClInclude Include="..\common\angleutils.h" />
     <ClInclude Include="..\common\debug.h" />
+    <ClInclude Include="..\common\winrtangleutils.h" />
     <ClInclude Include="..\common\winrtplatform.h" />
     <ClInclude Include="..\common\winrtutils.h" />
     <ClInclude Include="Config.h" />
