--- a/src/libEGL/libEGL_winrt_2013.vcxproj.filters
+++ b/src/libEGL/libEGL_winrt_2013.vcxproj.filters
@@ -35,6 +35,9 @@
     <ClCompile Include="TLSWinrt.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\common\winrtangleutils.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Config.h">
@@ -77,6 +80,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\common\winrtplatform.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\common\winrtangleutils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
