--- a/src/libGLESv2/libGLESv2_winrt.vcxproj
+++ b/src/libGLESv2/libGLESv2_winrt.vcxproj
@@ -283,6 +283,14 @@
   <ItemGroup>
     <ClCompile Include="..\common\event_tracer.cpp" />
     <ClCompile Include="..\common\winrtangle.cpp" />
+    <ClCompile Include="..\common\winrtangleutils.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
+    </ClCompile>
     <ClCompile Include="..\common\winrtutils.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">NotUsing</PrecompiledHeader>
@@ -379,6 +387,7 @@
     <ClInclude Include="..\common\debug.h" />
     <ClInclude Include="..\common\system.h" />
     <ClInclude Include="..\common\winrtangle.h" />
+    <ClInclude Include="..\common\winrtangleutils.h" />
     <ClInclude Include="..\common\winrtutils.h" />
     <ClInclude Include="..\common\winrt\ThreadEmulation.h" />
     <ClInclude Include="..\common\winrt\threadutils.h" />
