--- a/src/winrtcompiler/winrtcompiler.vcxproj
+++ b/src/winrtcompiler/winrtcompiler.vcxproj
@@ -142,7 +142,7 @@
       <AdditionalIncludeDirectories>../../include;../../src/;../../src/libGLESv2</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <CallingConvention>StdCall</CallingConvention>
-      <ObjectFileName>$(IntDir)/%(RelativeDir)/</ObjectFileName>
+      <ObjectFileName>$(IntDir)$(Configuration)/%(RelativeDir)/</ObjectFileName>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <Link>
@@ -210,7 +210,7 @@
       <AdditionalUsingDirectories>C:\Program Files %28x86%29\Windows Kits\8.0\References\CommonConfiguration\Neutral;C:\Program Files %28x86%29\Microsoft SDKs\Windows\v8.0\ExtensionSDKs\Microsoft.VCLibs\11.0\References\CommonConfiguration\neutral;%(AdditionalUsingDirectories)</AdditionalUsingDirectories>
       <AdditionalIncludeDirectories>../../include;../../src/;../../src/libGLESv2</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
-      <ObjectFileName>$(IntDir)/%(RelativeDir)/</ObjectFileName>
+      <ObjectFileName>$(IntDir)$(Configuration)/%(RelativeDir)/</ObjectFileName>
       <CallingConvention>StdCall</CallingConvention>
     </ClCompile>
     <Link>
